Fixed menu going behind the hero section

--- a/src/css/landingPage.css
+++ b/src/css/landingPage.css
@@ -4,7 +4,6 @@
 }
 
 #heroContainer {
-  position: relative;
   display: flex;
   min-height: 110vh;
   align-items: center;
